--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">SP23_PRO1121_CP18103_GROUP4</string>
     <string name="open_draw">open_drawable</string>
     <string name="close_draw">close_drawable</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
